--- a/index.css
+++ b/index.css
@@ -9,9 +9,7 @@ body {
 	width: 90%;
 	max-width: 60rem;
 	min-height: 100vh;
-    justify-content: center;
-    align-items: center;
-}
+    }
 
 .container {
     display: flex;
@@ -68,7 +66,7 @@ h3 {
     font-family: 'Cursed Timer ULiL', sans-serif;
 }
 
-#reset-btn {
+.reset-btn {
     display: flex;
     justify-content: center;
     width: 100px;
